docs: consolidate docs